# gi-loadouts

./: .coveragerc  .gitignore  .pre-commit-config.yaml  BUG_FIXES_SUMMARY.md  CONTRIBUTING.md  README.md  compile-qrc.py  dependencies.diff  gi-loadouts.spec  pyproject.pack.toml  pyproject.toml  renovate.json  test_log.txt  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude-code-review.yml  claude.yml  gnul.yml  mswn.yml  qlty.yml  rlse.yml  security.yml  test.yml  wipe.yml
assets/: arti.qrc  back.qrc  cons.qrc  data.qrc  face.qrc  help.ui  icon.qrc  info.ui  lcns.ui  name.qrc  otpt.ui  pmon.qrc  rare.qrc  scan.ui  side.qrc  text.qrc  vson.qrc  weap.qrc  wind.qrc  wind.ui  wish.qrc
gi_loadouts/: __init__.py  conf.py  main.py
gi_loadouts/data/arti/: __init__.py  acpt.py  advn.py  amam.py  bscv.py  bskr.py  bvht.py  bzst.py  csgt.py  cwof.py  dcrw.py  dfwl.py  dids.py  dspc.py  dwmm.py  eoao.py  eosf.py  fodg.py  fohw.py  fopl.py  gdfl.py  gdtp.py  gldr.py  gmbr.py  hodp.py  hood.py  istr.py  lkdg.py  lnso.py  lvwk.py  mcht.py  mdbv.py  mtat.py  nlob.py  nmdr.py  none.py  ntsu.py  nwiw.py  ochc.py  odcx.py  (+19 more)
gi_loadouts/data/char/: __init__.py  aether.py  aino.py  albedo.py  alhaitham.py  aloy.py  amber.py  arataki_itto.py  arlecchino.py  baizhu.py  barbara.py  beidou.py  bennett.py  candace.py  charlotte.py  chasca.py  chevreuse.py  chiori.py  chongyun.py  citlali.py  clorinde.py  collei.py  columbina.py  cyno.py  dahlia.py  dehya.py  diluc.py  diona.py  dori.py  durin.py  emilie.py  escoffier.py  eula.py  faruzan.py  fischl.py  flins.py  freminet.py  furina.py  gaming.py  ganyu.py  (+80 more)
gi_loadouts/data/weap/: __init__.py
gi_loadouts/data/weap/bows/: __init__.py  aqsl.py  asbw.py  avcp.py  ayht.py  bcwb.py  cdfg.py  cnbr.py  cpbw.py  efte.py  eotl.py  fdtl.py  fvwb.py  fwtf.py  gfbo.py  hmym.py  htbw.py  htpt.py  ispc.py  kgsr.py  mnwz.py  momo.py  msgr.py  pdtr.py  prsr.py  ptct.py  rcbw.py  rnge.py  rsrb.py  rust.py  rvbw.py  rybw.py  sehk.py  sest.py  sfbw.py  sgst.py  shbw.py  sobs.py  sosn.py  sshs.py  (+8 more)
gi_loadouts/data/weap/catalysts/: __init__.py  agdh.py  aptn.py  ashs.py  atfd.py  bcag.py  bmln.py  bobb.py  cegc.py  cfsv.py  ddts.py  dgft.py  edob.py  elmg.py  elsl.py  eypt.py  foff.py  ftbr.py  fvcx.py  fwpr.py  hsrg.py  jfsd.py  kgvy.py  lpsw.py  mama.py  mcge.py  mmdt.py  nucc.py  nwlg.py  osee.py  owsy.py  pkgm.py  ptab.py  roye.py  rqot.py  rygm.py  scwh.py  sffm.py  sfje.py  sfup.py  (+12 more)
gi_loadouts/data/weap/claymores/: __init__.py  akmr.py  atbs.py  atot.py  bcsh.py  bors.py  btgs.py  dbcl.py  ehsr.py  ffhk.py  ffit.py  fngs.py  fomk.py  fosd.py  frrg.py  gomw.py  kknm.py  libd.py  lrsl.py  miam.py  mlfw.py  mtky.py  omsp.py  ptar.py  ptps.py  rhst.py  rnsh.py  rygs.py  sfgs.py  sobp.py  spsp.py  srgs.py  stss.py  swpr.py  tbll.py  tdsd.py  tgsk.py  toft.py  tufg.py  uoms.py  (+5 more)
gi_loadouts/data/weap/polearms/: __init__.py  bcpl.py  bgpr.py  bktl.py  botf.py  bsrs.py  ccpk.py  cmql.py  cmsl.py  dgbn.py  dsar.py  dssr.py  dtds.py  dtmh.py  efln.py  fnlc.py  fotr.py  ftho.py  hlbd.py  inpt.py  kncs.py  lcsr.py  ldeg.py  mnpr.py  mswp.py  mtbb.py  pdrl.py  pjws.py  ppsv.py  ptsg.py  rtrw.py  rysp.py  sfsf.py  sohm.py  soss.py  spos.py  swsp.py  tcth.py  tyno.py  vtvq.py  (+2 more)
gi_loadouts/data/weap/swords/: __init__.py  absn.py  aeas.py  ankg.py  aqfv.py  azlt.py  bcls.py  clsl.py  cmoe.py  cnsd.py  disd.py  dlbd.py  fcfm.py  fdsn.py  flbd.py  foel.py  fotd.py  ftds.py  fvsd.py  hbod.py  hgft.py  insg.py  kokn.py  ksin.py  lbms.py  lnrr.py  lofi.py  msrf.py  mwdn.py  pmjc.py  ppts.py  ptrc.py  ryls.py  sfsd.py  slsd.py  smsp.py  sncl.py  sods.py  sonk.py  sotw.py  (+13 more)
gi_loadouts/face/: otpt.py  rsrc.py  util.py
gi_loadouts/face/info/: info.py  main.py
gi_loadouts/face/lcns/: lcns.py  main.py
gi_loadouts/face/otpt/: main.py  otpt.py  rule.py
gi_loadouts/face/rsrc/: __init__.py
gi_loadouts/face/rsrc/arti/: __init__.py
gi_loadouts/face/rsrc/font/: icon.py  text.py
gi_loadouts/face/rsrc/rare/: __init__.py
gi_loadouts/face/rsrc/vson/: __init__.py
gi_loadouts/face/rsrc/weap/: __init__.py
gi_loadouts/face/scan/: __init__.py  file.py  main.py  rule.py  scan.py  util.py  work.py
gi_loadouts/face/wind/: __init__.py  calc.py  fclt.py  file.py  main.py  rule.py  talk.py  util.py  wind.py
gi_loadouts/pack/: net.gridhead.gi-loadouts.desktop  net.gridhead.gi-loadouts.metainfo.xml
gi_loadouts/type/arti/: __init__.py  base.py  ccol.py  fwol.py  gboe.py  pmod.py  sdoe.py  stat.py
gi_loadouts/type/arti/base/: __init__.py
gi_loadouts/type/calc/: __init__.py  arti.py  char.py  weap.py
gi_loadouts/type/char/: __init__.py  cons.py  mult.py
gi_loadouts/type/file/: __init__.py  arti.py  team.py  weap.py
gi_loadouts/type/levl/: __init__.py
gi_loadouts/type/rank/: __init__.py
gi_loadouts/type/rare/: __init__.py
gi_loadouts/type/stat/: __init__.py
gi_loadouts/type/vson/: __init__.py
gi_loadouts/type/weap/: __init__.py  ascn.py  hpak.py  mult.py  tier.py
gi_loadouts/type/weap/base/: ascn.py  mult.py
gi_loadouts/type/weap/base/ascn/: __init__.py
gi_loadouts/wind/: main.py  rule.py  util.py  wind.py
test/: __init__.py  conftest.py  test_main.py
test/data/: test_arti.py  test_char.py
test/data/weap/: test_bow.py  test_catalyst.py  test_claymore.py  test_polearm.py  test_sword.py
test/face/: test_wind.py
test/face/info/: test_info.py
test/face/lcns/: test_lcns.py
test/face/otpt/: __init__.py  test_otpt.py
test/face/scan/: __init__.py  test_scan.py
test/face/wind/: __init__.py  test_main.py  test_wind_main.py
test/face/wind/arti/: __init__.py  test_arti.py  test_arti_file.py
test/face/wind/char/: test_char.py
test/face/wind/team/: __init__.py  test_team.py  test_team_file.py
test/face/wind/weap/: __init__.py  test_bow.py  test_catalyst.py  test_claymore.py  test_file.py  test_polearm.py  test_sword.py
test/face/wind/weap/kind/: test_bow.py  (+4 more)
test/type/: test_arti.py  test_char.py  test_levl.py  test_rank.py  test_rare.py  test_stat.py  test_vson.py  test_weap.py
(+2 files in other folders)
