[tool.poetry]
name = "gi-loadouts"
version = "0.1.8"
description = "Loadouts for Genshin Impact"
authors = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>", "Avadhoot Dhere <avadhootd99@gmail.com>", "Dhruv Bhirud <bhiruddhruv@gmail.com>", "Prithviraj Chavan <prithvichavan56110@gmail.com>", "Shounak Dey <shounakdey@ymail.com>"]
license = "GPL-3.0-or-later"
maintainers = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/gridhead/gi-loadouts"
repository = "https://github.com/gridhead/gi-loadouts"
documentation = "https://github.com/gridhead/gi-loadouts/blob/main/README.md"
keywords = []
classifiers= [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "License :: OSI Approved :: SIL Open Font License 1.1 (OFL-1.1)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Front-Ends",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6-essentials = "^6.8.1,<6.8.1.1"
pydantic = "^2.8.2"
pyyaml = "^6.0.2"
pillow = "^10.4.0 || ^11.0.0"
pytesseract = "^0.3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^4.1.0 || ^5.0.0 || ^6.0.0"
pytest-qt = "^4.4.0"
pytest-xvfb = "^3.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
ruff = "^0.2.0 || ^0.3.0 || ^0.6.0 || ^0.7.0 || ^0.11.0"
tox = "^4.0.0"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"gi_loadouts/*" = ["E501"]
"test/*" = ["S101", "E501", "S311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gi-loadouts = "gi_loadouts.main:main"

[tool.coverage]
report = { show_missing = true }

[tool.coverage.run]
omit = [
    "gi_loadouts/face/rsrc/arti/*.py",
    "gi_loadouts/face/rsrc/char/*.py",
    "gi_loadouts/face/rsrc/data/*.py",
    "gi_loadouts/face/rsrc/font/*.py",
    "gi_loadouts/face/rsrc/pmon/*.py",
    "gi_loadouts/face/rsrc/rare/*.py",
    "gi_loadouts/face/rsrc/vson/*.py",
    "gi_loadouts/face/rsrc/weap/*.py"
]
